--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: Poppins, "Helvetica Neue", sans-serif;
+  background-attachment: fixed;
+  background: rgb(157, 114, 255);
+  background: radial-gradient(
+    circle,
+    rgba(49, 164, 189, 1) 0%,
+    rgba(233, 200, 148, 1) 100%
+  );
+  background-size: 100%;
+}
