refactor: extract header to separate component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<header>
-  <div class="header">
-    <div class="header__logo">
-      <div class="header__logo-img"></div>
-      <div class="header__logo-text">Weather App</div>
-    </div>
-    <nav class="header__nav">
-      <ul class="header__nav-ul">
-        <li class="header__nav-item">GitHub</li>
-      </ul>
-    </nav>
-  </div>
-</header>
-
+<app-header></app-header>
 <div class="weather-widget">
   <div class="weather-widget__search"></div>
   <div class="weather-widget__data">
