--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="header">
+  <div class="header__logo">
+    <img class="header__logo-img" src="../../../../assets/images/logo.png" />
+    <div class="header__logo-text">Weather App</div>
+  </div>
+  <nav class="header__nav">
+    <ul class="header__nav-ul">
+      <li class="header__nav-item">
+        <a href="https://github.com/vladjl3">GitHub</a>
+      </li>
+    </ul>
+  </nav>
+</div>
