feat: extract weather widget to separate module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,59 +1,5 @@
 <app-header></app-header>
-<div class="weather-widget">
-  <div class="weather-widget__search"></div>
-  <div class="weather-widget__data">
-    <div class="weather-widget__data-location">
-      <div class="weather-widget__current-icon"></div>
-      <div class="weather-widget__data-location-group">
-        <div class="weather-widget__data-location-city">Павлодар</div>
-        <div class="weather-widget__data-date">Понедельник 15/01/2023</div>
-      </div>
-    </div>
-    <div class="weather-widget__current">
-      <div class="row">
-        <div class="col sb">
-          <div class="weather-widget__temperature">
-            <div class="weather-widget__data-temperature-number">15</div>
-            <div class="weather-widget__data-temperature-measure">
-              <sup>o</sup>C
-            </div>
-          </div>
-          <div class="weather-widget__data-description">В основном облачно</div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="row">
-          <div class="col">
-            <img src="" alt="" class="visibility-icon" />
-            <p>Видимость</p>
-            <p>10км</p>
-          </div>
-          <div class="col">
-            <img src="" alt="" class="feels-like-icon" />
-            <p>Ощущается как</p>
-            <div class="weather-widget__temperature">
-              <div class="weather-widget__data-temperature-number">12</div>
-              <div class="weather-widget__data-temperature-measure">
-                <sup>o</sup>C
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <img src="" alt="" class="humidity-icon" />
-            <p>Влажность</p>
-            <p>100%</p>
-          </div>
-          <div class="col">
-            <img src="" alt="" class="feels-like-icon" />
-            <p>Ветер</p>
-            <p>10 км/ч</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+
+<app-weather-widget></app-weather-widget>
 
 <router-outlet></router-outlet>
