feat: implement weather data displaying

--- a/src/app/modules/weather-widget/components/weather-widget-data/weather-widget-data.component.html
+++ b/src/app/modules/weather-widget/components/weather-widget-data/weather-widget-data.component.html
@@ -1,23 +1,32 @@
-<div class="weather-widget__data">
+<div *ngIf="weatherDataProps" class="weather-widget__data">
   <div class="row weather-widget__data-location">
     <img
       class="weather-widget__current-icon"
-      src="../../../../../assets/images/sunny.png"
+      src={{weatherDataProps.current.condition.icon}}
     />
     <div class="col">
-      <div class="weather-widget__data-location-city">Павлодар</div>
-      <div class="weather-widget__data-date">Понедельник 15/01/2023</div>
+      <div class="weather-widget__data-location-city">
+        {{ weatherDataProps.location.name }}
+      </div>
+      <div class="weather-widget__data-date">
+        {{
+          weatherDataProps.location.localtime_epoch * 1000
+            | date : "EEEE dd/MM/yyyy"
+        }}
+      </div>
     </div>
   </div>
   <div class="weather-widget__current">
     <div class="col weather-widget__temperature">
       <div class="weather-widget__data-temperature-number">
-        15
+        {{ weatherDataProps.current.temp_c }}
         <span class="weather-widget__data-temperature-measure">
           <sup>o</sup>C
         </span>
       </div>
-      <div class="weather-widget__data-description">В основном облачно</div>
+      <div class="weather-widget__data-description">
+        {{ weatherDataProps.current.condition.text }}
+      </div>
     </div>
     <div class="col weather-widget__details">
       <div class="row">
@@ -30,7 +39,9 @@
             />
             <p class="weather-widget__details-item-title">Видимость</p>
           </div>
-          <p class="weather-widget__details-item-value">10км</p>
+          <p class="weather-widget__details-item-value">
+            {{ weatherDataProps.current.vis_km }}км
+          </p>
         </div>
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
@@ -39,9 +50,11 @@
               alt=""
               class="feels-like-icon"
             />
-            <p class="weather-widget__details-item-title">Ощущается как</p>
+            <p class="weather-widget__details-item-title">Ощущается</p>
           </div>
-          <div class="weather-widget__details-item-value">12<sup>o</sup>C</div>
+          <div class="weather-widget__details-item-value">
+            {{ weatherDataProps.current.feelslike_c }}<sup>o</sup>C
+          </div>
         </div>
       </div>
       <div class="row">
@@ -54,7 +67,9 @@
             />
             <p class="weather-widget__details-item-title">Влажность</p>
           </div>
-          <p class="weather-widget__details-item-value">100%</p>
+          <p class="weather-widget__details-item-value">
+            {{ weatherDataProps.current.humidity }}%
+          </p>
         </div>
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
@@ -65,7 +80,9 @@
             />
             <p class="weather-widget__details-item-title">Ветер</p>
           </div>
-          <p class="weather-widget__details-item-value">10 км/ч</p>
+          <p class="weather-widget__details-item-value">
+            {{ weatherDataProps.current.wind_kph }} км/ч
+          </p>
         </div>
       </div>
     </div>
