--- a/src/app/modules/weather-widget/components/weather-widget-search/weather-widget-search.component.scss
+++ b/src/app/modules/weather-widget/components/weather-widget-search/weather-widget-search.component.scss
@@ -34,7 +34,7 @@
     border-radius: 48px;
   }
 
-  &__auocomplete-options-item {
+  &__auocomplete-options-item:not(:last-child) {
     line-height: 36px;
     margin-bottom: 16px;
   }
