--- a/src/app/modules/weather-widget/components/weather-widget-search/weather-widget-search.component.html
+++ b/src/app/modules/weather-widget/components/weather-widget-search/weather-widget-search.component.html
@@ -10,12 +10,12 @@
       class="weather-widget__search-box-input"
     />
     <div
-      *ngIf="cities$ | async as cities"
+      *ngIf="isCitySelecting"
       id="cities"
       class="weather-widget__auocomplete-options"
     >
       <option
-        *ngFor="let city of cities"
+        *ngFor="let city of cities$ | async as cities"
         [value]="city"
         class="weather-widget__auocomplete-options-item"
         (click)="selectCity(city.name)"
