fix: change relative paths of images

--- a/src/app/modules/weather-widget/components/weather-widget-data/weather-widget-data.component.html
+++ b/src/app/modules/weather-widget/components/weather-widget-data/weather-widget-data.component.html
@@ -33,7 +33,7 @@
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
             <img
-              src="../../../../../assets/images/visibility-icon.png"
+              src="assets/images/visibility-icon.png"
               alt=""
               class="weather-widget__details-item-icon visibility-icon"
             />
@@ -46,7 +46,7 @@
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
             <img
-              src="../../../../../assets/images/feels-like-icon.png"
+              src="assets/images/feels-like-icon.png"
               alt=""
               class="feels-like-icon"
             />
@@ -61,7 +61,7 @@
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
             <img
-              src="../../../../../assets/images/humidity-icon.png"
+              src="assets/images/humidity-icon.png"
               alt=""
               class="humidity-icon"
             />
@@ -74,7 +74,7 @@
         <div class="row weather-widget__details-item">
           <div class="weather-widget__details-item-icon-title-group">
             <img
-              src="../../../../../assets/images/wind-icon.png"
+              src="assets/images/wind-icon.png"
               alt=""
               class="wind-icon"
             />
