--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="header__logo">
-    <img class="header__logo-img" src="../../../../assets/images/logo.png" />
+    <img class="header__logo-img" src="assets/images/logo.png" />
     <div class="header__logo-text">Weather App</div>
   </div>
   <nav class="header__nav">
